--- a/index.html
+++ b/index.html
@@ -6,3 +6,20 @@ layout: default
 
 <p>Dinosaurs are super rockin awesomeness woo</p>
 
+<h2>Carnivores</h2>
+<ul>
+{% for dino in site.pages %}
+{% if dino.category == "carnivore" %}
+	<li>{{dino.name}}</li>
+	{% endif %}
+	{% endfor %}
+</ul>
+
+<h2>Herbivores</h2>
+<ul>
+{% for dino in site.pages %}
+{% if dino.category == "herbivore" %}
+	<li>{{dino.name}}</li>
+	{% endif %}
+	{% endfor %}
+</ul>
