replaced with thomas' versions

--- a/carnivores.html
+++ b/carnivores.html
@@ -3,15 +3,13 @@ layout: default
 ---
 
 <h1>Carnivores</h1>
-<ul class="dino-list">
-{% for dino in site.pages %}
-{% if dino.category == "carnivore" %}
-	<li>
-		<figure>
-		<img src="img/{{dino.thumb}}" alt="">
-			<figcaption>{{dino.name}}</figcaption>
-		</figure>
-	</li>
-	{% endif %}
+<ul>
+	{% for dino in site.pages %}
+		{% if dino.category == "carnivore" %}
+			<li>
+				<img src="{{site.baseurl}}/img/{{dino.thumb}}" alt="Photo of {{dino.name}}">
+				<p>{{dino.name}}</p>
+			</li>
+		{% endif %}
 	{% endfor %}
 </ul>
